--- a/code/pom.xml
+++ b/code/pom.xml
@@ -18,10 +18,24 @@
 	<kotlin.version>1.7.22</kotlin.version>
   </properties>
   <dependencies>
+<!--	<dependency>-->
+<!--	  <groupId>org.springframework.boot</groupId>-->
+<!--	  <artifactId>spring-boot-starter-actuator</artifactId>-->
+<!--	</dependency>-->
+ 
 	<dependency>
-	  <groupId>org.springframework.boot</groupId>
-	  <artifactId>spring-boot-starter-actuator</artifactId>
+	  <groupId>org.slf4j</groupId>
+	  <artifactId>slf4j-api</artifactId>
+	  <version>2.0.6</version>
 	</dependency>
+ 
+	<dependency>
+	  <groupId>ch.qos.logback</groupId>
+	  <artifactId>logback-classic</artifactId>
+	  <version>1.4.5</version>
+	  <scope>test</scope>
+	</dependency>
+	
 	<dependency>
 	  <groupId>org.springframework.boot</groupId>
 	  <artifactId>spring-boot-starter-data-cassandra</artifactId>
@@ -89,16 +103,16 @@
 	  <scope>runtime</scope>
 	  <optional>true</optional>
 	</dependency>
-	<dependency>
-	  <groupId>io.micrometer</groupId>
-	  <artifactId>micrometer-registry-datadog</artifactId>
-	  <scope>runtime</scope>
-	</dependency>
-	<dependency>
-	  <groupId>io.micrometer</groupId>
-	  <artifactId>micrometer-registry-prometheus</artifactId>
-	  <scope>runtime</scope>
-	</dependency>
+<!--	<dependency>-->
+<!--	  <groupId>io.micrometer</groupId>-->
+<!--	  <artifactId>micrometer-registry-datadog</artifactId>-->
+<!--	  <scope>runtime</scope>-->
+<!--	</dependency>-->
+<!--	<dependency>-->
+<!--	  <groupId>io.micrometer</groupId>-->
+<!--	  <artifactId>micrometer-registry-prometheus</artifactId>-->
+<!--	  <scope>runtime</scope>-->
+<!--	</dependency>-->
 	<dependency>
 	  <groupId>org.postgresql</groupId>
 	  <artifactId>postgresql</artifactId>
