--- a/code/pom.xml
+++ b/code/pom.xml
@@ -8,38 +8,17 @@
 	<version>3.0.1</version>
 	<relativePath/> <!-- lookup parent from repository -->
   </parent>
-  <groupId>com.soma.app</groupId>
-  <artifactId>backend-repo</artifactId>
+  <groupId>com.soma_app</groupId>
+  <artifactId>backend_application</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>backend-repo</name>
-  <description>backend-repo</description>
+  <name>backend_application</name>
+  <description>backend_application</description>
   <properties>
 	<java.version>17</java.version>
 	<kotlin.version>1.7.22</kotlin.version>
+	<spring-cloud.version>2022.0.0</spring-cloud.version>
   </properties>
   <dependencies>
-<!--	<dependency>-->
-<!--	  <groupId>org.springframework.boot</groupId>-->
-<!--	  <artifactId>spring-boot-starter-actuator</artifactId>-->
-<!--	</dependency>-->
- 
-	<dependency>
-	  <groupId>org.slf4j</groupId>
-	  <artifactId>slf4j-api</artifactId>
-	  <version>2.0.6</version>
-	</dependency>
- 
-	<dependency>
-	  <groupId>ch.qos.logback</groupId>
-	  <artifactId>logback-classic</artifactId>
-	  <version>1.4.5</version>
-	  <scope>test</scope>
-	</dependency>
-	
-	<dependency>
-	  <groupId>org.springframework.boot</groupId>
-	  <artifactId>spring-boot-starter-data-cassandra</artifactId>
-	</dependency>
 	<dependency>
 	  <groupId>org.springframework.boot</groupId>
 	  <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
@@ -52,17 +31,17 @@
 	  <groupId>org.springframework.boot</groupId>
 	  <artifactId>spring-boot-starter-data-ldap</artifactId>
 	</dependency>
-	<dependency>
-	  <groupId>org.springframework.boot</groupId>
-	  <artifactId>spring-boot-starter-data-mongodb</artifactId>
-	</dependency>
+	<!--	<dependency>-->
+	<!--	  <groupId>org.springframework.boot</groupId>-->
+	<!--	  <artifactId>spring-boot-starter-data-mongodb</artifactId>-->
+	<!--	</dependency>-->
 	<dependency>
 	  <groupId>org.springframework.boot</groupId>
 	  <artifactId>spring-boot-starter-data-redis</artifactId>
 	</dependency>
 	<dependency>
 	  <groupId>org.springframework.boot</groupId>
-	  <artifactId>spring-boot-starter-graphql</artifactId>
+	  <artifactId>spring-boot-starter-mail</artifactId>
 	</dependency>
 	<dependency>
 	  <groupId>org.springframework.boot</groupId>
@@ -81,16 +60,16 @@
 	  <artifactId>jackson-module-kotlin</artifactId>
 	</dependency>
 	<dependency>
-	  <groupId>org.apache.kafka</groupId>
-	  <artifactId>kafka-streams</artifactId>
-	</dependency>
-	<dependency>
 	  <groupId>org.jetbrains.kotlin</groupId>
 	  <artifactId>kotlin-reflect</artifactId>
 	</dependency>
 	<dependency>
 	  <groupId>org.jetbrains.kotlin</groupId>
 	  <artifactId>kotlin-stdlib-jdk8</artifactId>
+	</dependency>
+	<dependency>
+	  <groupId>org.springframework.cloud</groupId>
+	  <artifactId>spring-cloud-function-web</artifactId>
 	</dependency>
 	<dependency>
 	  <groupId>org.springframework.kafka</groupId>
@@ -103,39 +82,32 @@
 	  <scope>runtime</scope>
 	  <optional>true</optional>
 	</dependency>
-<!--	<dependency>-->
-<!--	  <groupId>io.micrometer</groupId>-->
-<!--	  <artifactId>micrometer-registry-datadog</artifactId>-->
-<!--	  <scope>runtime</scope>-->
-<!--	</dependency>-->
-<!--	<dependency>-->
-<!--	  <groupId>io.micrometer</groupId>-->
-<!--	  <artifactId>micrometer-registry-prometheus</artifactId>-->
-<!--	  <scope>runtime</scope>-->
-<!--	</dependency>-->
 	<dependency>
 	  <groupId>org.postgresql</groupId>
 	  <artifactId>postgresql</artifactId>
 	  <scope>runtime</scope>
 	</dependency>
+	
 	<dependency>
-	  <groupId>org.springframework.boot</groupId>
-	  <artifactId>spring-boot-configuration-processor</artifactId>
-	  <optional>true</optional>
+	  <groupId>io.jsonwebtoken</groupId>
+	  <artifactId>jjwt-api</artifactId>
+	  <version>0.11.5</version>
 	</dependency>
+	<dependency>
+	  <groupId>io.jsonwebtoken</groupId>
+	  <artifactId>jjwt-impl</artifactId>
+	  <version>0.11.5</version>
+	</dependency>
+	<dependency>
+	  <groupId>io.jsonwebtoken</groupId>
+	  <artifactId>jjwt-jackson</artifactId>
+	  <version>0.11.5</version>
+	</dependency>
+	
+	
 	<dependency>
 	  <groupId>org.springframework.boot</groupId>
 	  <artifactId>spring-boot-starter-test</artifactId>
-	  <scope>test</scope>
-	</dependency>
-	<dependency>
-	  <groupId>org.springframework</groupId>
-	  <artifactId>spring-webflux</artifactId>
-	  <scope>test</scope>
-	</dependency>
-	<dependency>
-	  <groupId>org.springframework.graphql</groupId>
-	  <artifactId>spring-graphql-test</artifactId>
 	  <scope>test</scope>
 	</dependency>
 	<dependency>
@@ -149,6 +121,17 @@
 	  <scope>test</scope>
 	</dependency>
   </dependencies>
+  <dependencyManagement>
+	<dependencies>
+	  <dependency>
+		<groupId>org.springframework.cloud</groupId>
+		<artifactId>spring-cloud-dependencies</artifactId>
+		<version>${spring-cloud.version}</version>
+		<type>pom</type>
+		<scope>import</scope>
+	  </dependency>
+	</dependencies>
+  </dependencyManagement>
   
   <build>
 	<sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
