--- a/code/pom.xml
+++ b/code/pom.xml
@@ -120,6 +120,22 @@
 	  <artifactId>spring-security-test</artifactId>
 	  <scope>test</scope>
 	</dependency>
+	<dependency>
+	  <groupId>org.mockito</groupId>
+	  <artifactId>mockito-core</artifactId>
+	  <version>4.5.1</version>
+	</dependency>
+	<dependency>
+	  <groupId>junit</groupId>
+	  <artifactId>junit</artifactId>
+	  <version>4.12</version>
+	</dependency>
+	<dependency>
+	  <groupId>org.springframework.boot</groupId>
+	  <artifactId>spring-boot-test-autoconfigure</artifactId>
+	  <version>2.7.4</version>
+	</dependency>
+	
   </dependencies>
   <dependencyManagement>
 	<dependencies>
