--- a/code/pom.xml
+++ b/code/pom.xml
@@ -5,7 +5,7 @@
   <parent>
 	<groupId>org.springframework.boot</groupId>
 	<artifactId>spring-boot-starter-parent</artifactId>
-	<version>3.0.1</version>
+	<version>3.2.0</version>
 	<relativePath/> <!-- lookup parent from repository -->
   </parent>
   <groupId>com.soma_app</groupId>
@@ -15,7 +15,7 @@
   <description>backend_application</description>
   <properties>
 	<java.version>17</java.version>
-	<kotlin.version>1.7.22</kotlin.version>
+	<kotlin.version>1.9.20</kotlin.version>
 	<spring-cloud.version>2022.0.0</spring-cloud.version>
   </properties>
   <dependencies>
@@ -27,6 +27,11 @@
 	  <groupId>org.springframework.boot</groupId>
 	  <artifactId>spring-boot-starter-data-jpa</artifactId>
 	</dependency>
+	  <dependency>
+		  <groupId>com.stripe</groupId>
+		  <artifactId>stripe-java</artifactId>
+		  <version>24.6.0</version>
+	  </dependency>
 	<dependency>
 	  <groupId>org.springframework.boot</groupId>
 	  <artifactId>spring-boot-starter-data-ldap</artifactId>
